--- a/LifeGame/LifeGame.csproj
+++ b/LifeGame/LifeGame.csproj
@@ -59,6 +59,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="CellBoard.cs" />
+    <Compile Include="MouseScrollElementBehavior.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
